fixed html spacing, fixed card icon alignment

--- a/apps/starhub/src/app/home/vouchers/vouchers.component.scss
+++ b/apps/starhub/src/app/home/vouchers/vouchers.component.scss
@@ -7,7 +7,7 @@ button {
   border-radius: 5px;
   text-transform: uppercase;
   font-size: 1.8rem;
-  height: 6rem;
+  height: 5rem;
   width: 100%;
 }
 
@@ -17,4 +17,22 @@ button {
 
 .disabled-icon {
   @include icon(3.2rem, #D4D4D4, white);
+}
+
+h1 {
+  color: #666666;
+}
+
+.mat-card {
+  margin-bottom: 1rem;
+  display: flex;
+}
+
+.mat-card-header {
+  vertical-align: middle;
+  align-items: center;
+
+  .mat-card-title {
+    margin-bottom: 0;
+  }
 }
